--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <input type="text" class="form-control" id="Longitude" />
         </div>
       </div>
-      <button class="bnt btn-primary" onclick="getPrevisao()">Ok</button>
+      <button class="btn btn-primary" onclick="getPrevisao()">Ok</button>
     </div>
     <div class="container">
       <div id="resposta"></div>
